# Hal-Has2

./: CMakeLists.txt  Makefile  RAL_common.cpp  RAL_common.h  RAL_mpi.cpp  RAL_mpi.h  RAL_new.cpp  RAL_new.h  RAS.cpp  RAS.h  RAS_mpi.cpp  RAS_mpi.h  README.md  alignment.cpp  alignment.h  charSet.cpp  charSet.h  config.h.in  core.cpp  core.h  core_mpi.cpp  core_mpi.h  data.HAS.chkpt.txt  data.NEW-BU.AIC.result.txt  data.NEW-BU.HAL.AIC.result.txt  data.NEW-BU.chkpt.txt  data.phy  definitions.h  eigenvalue_4_by_4.cpp  eigenvalue_4_by_4.h  global.cpp  global.h  gradient.cpp  gradient.h  jacobi_eigenvalue.cpp  jacobi_eigenvalue.h  lbfgsb_new.cpp  lbfgsb_new.h  license.txt  main_BU_new1.cpp  (+16 more)
